Import of AWNCORP/Validation-Class-Document-0.000010 from CPAN.
gitpan-cpan-distribution: Validation-Class-Document
gitpan-cpan-version:      0.000010
gitpan-cpan-path:         AWNCORP/Validation-Class-Document-0.000010.tar.gz
gitpan-cpan-author:       AWNCORP
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Validation::Class::Document - Data Validation for Hierarchical Data
 
 VERSION
-    version 0.000009
+    version 0.000010
 
 SYNOPSIS
         package MyApp::Person;
@@ -81,16 +81,7 @@ DESCRIPTION
     to the increasing demand for communication between applications,
     serializing and transmitting structured data over a network connection.
 
-METHODS
-  validate_document
-    The validate_document method (or document_validates) is used to validate
-    the specified hierarchical data against the specified document
-    declaration. This is extremely valuable for validating serialized
-    messages passed between machines. This method requires two arguments,
-    the name of the document declaration to be used, and the data to be
-    validated which should be submitted in the form of a hashref.
-
-DOCUMENT NOTATION
+OVERVIEW
     Validation::Class::Document exports the document (or dom) keyword which
     allows you to pre-define/configure your path matching rules for your
     data structure. The "path matching rules", which is actually a custom
@@ -115,26 +106,26 @@ DOCUMENT NOTATION
 
         # select name -> first_name/last_name to validate against the string rules
         document 'foobar' =>
-          {'name.first_name' => 'string', 'name.last_name' => 'string'};
+            {'name.first_name' => 'string', 'name.last_name' => 'string'};
 
         # or
         document 'foobar' =>
-          {'name.*_name' => 'string'};
+            {'name.*_name' => 'string'};
 
         # select each element in friends to validate against the string rules
         document 'foobar' =>
             { 'friends.@' => 'string' };
 
-        # or select an element within a hashref within in friends to validate
+        # or select an element of a hashref in each element in friends to validate
         document 'foobar' =>
             { 'friends.@.name' => 'string' };
 
-    The document declaration keys should be follow the aforementioned
-    document notation scheme and the values should be strings which
+    The document declaration's keys should follow the aforementioned
+    document notation scheme and it's values should be strings which
     correspond to the names of fields (or other document declarations) that
     will be used to preform the data validation. It is possible to combine
-    document declarations to validation hierarchical data that contains data
-    strucutres matching one or more document patterns. The following is an
+    document declarations to validate hierarchical data that contains data
+    structures matching one or more document patterns. The following is an
     example of what that might look like.
 
         package MyApp::Person;
@@ -173,6 +164,15 @@ DOCUMENT NOTATION
         unless ($person->validate_document(person => $data)) {
             warn $person->errors_to_string if $person->error_count;
         }
+
+METHODS
+  validate_document
+    The validate_document method (or document_validates) is used to validate
+    the specified hierarchical data against the specified document
+    declaration. This is extremely valuable for validating serialized
+    messages passed between machines. This method requires two arguments,
+    the name of the document declaration to be used, and the data to be
+    validated which should be submitted in the form of a hashref.
 
 AUTHOR
     Al Newkirk <anewkirk@ana.io>
