Import of AWNCORP/Validation-Class-Document-0.000011 from CPAN.
gitpan-cpan-distribution: Validation-Class-Document
gitpan-cpan-version:      0.000011
gitpan-cpan-path:         AWNCORP/Validation-Class-Document-0.000011.tar.gz
gitpan-cpan-author:       AWNCORP
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Validation::Class::Document - Data Validation for Hierarchical Data
 
 VERSION
-    version 0.000010
+    version 0.000011
 
 SYNOPSIS
         package MyApp::Person;
@@ -72,6 +72,10 @@ SYNOPSIS
         }
 
 DESCRIPTION
+    Validation::Class::Document inherits all functionality from
+    Validation::Class and implements additional abilities documented as
+    follows.
+
     This module allows you to validate hierarchical structures using the
     Validation::Class framework. This is an experimental yet highly
     promising approach toward the consistent processing of nested
@@ -101,23 +105,23 @@ OVERVIEW
         }
 
         # select id to validate against the string rules
-        document 'foobar' =>
+        document 'foobar'  =>
             { 'id' => 'string' };
 
         # select name -> first_name/last_name to validate against the string rules
-        document 'foobar' =>
+        document 'foobar'  =>
             {'name.first_name' => 'string', 'name.last_name' => 'string'};
 
         # or
-        document 'foobar' =>
+        document 'foobar'  =>
             {'name.*_name' => 'string'};
 
         # select each element in friends to validate against the string rules
-        document 'foobar' =>
-            { 'friends.@' => 'string' };
+        document 'foobar'  =>
+            { 'friends.@'  => 'string' };
 
         # or select an element of a hashref in each element in friends to validate
-        document 'foobar' =>
+        document 'foobar'  =>
             { 'friends.@.name' => 'string' };
 
     The document declaration's keys should follow the aforementioned
@@ -151,7 +155,7 @@ OVERVIEW
 
         my $data = {
             "name"   => "Anita Campbell-Green",
-            "friend" => [
+            "friends" => [
                 { "name" => "Horace" },
                 { "name" => "Skinner" },
                 { "name" => "Alonzo" },
