--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Validation::Class::Document - Data Validation for Hierarchical Data
 
 VERSION
-    version 0.000013
+    version 0.000014
 
 SYNOPSIS
         package MyApp::Person;
@@ -176,9 +176,14 @@ METHODS
     declaration. This is extremely valuable for validating serialized
     messages passed between machines. This method requires two arguments,
     the name of the document declaration to be used, and the data to be
-    validated which should be submitted in the form of a hashref.
+    validated which should be submitted in the form of a hashref. The
+    following is an example of this technique:
+
+        my $boolean = $self->validate_document(foobar => $data);
+
     Additionally, you may submit options in the form of a hashref to further
-    control the validation process. The following is an example of this.
+    control the validation process. The following is an example of this
+    technique:
 
         # the prune option removes non-matching parameters (nodes)
         my $boolean = $self->validate_document(foobar => $data, { prune => 1 });
